--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,5 @@ add_executable(new_target ignoreN/ignoreN.c
         assessment2/checkin/checkin.c
         assessment2/secChild/secChild.c
         assessment2/len/len.c
-        assessment2/udp2tcp/udp2tcp.c)
+        assessment2/udp2tcp/udp2tcp.c
+        assessment2/mq_carousel/mq_carousel.c)
