--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,5 @@ add_executable(new_target ignoreN/ignoreN.c
         assessment2/secChild/secChild.c
         assessment2/len/len.c
         assessment2/udp2tcp/udp2tcp.c
-        assessment2/mq_carousel/mq_carousel.c)
+        assessment2/mq_carousel/mq_carousel.c
+        assessment2/dogbdy/dogbday.c)
