sd done updated README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,5 @@ add_executable(new_target ignoreN/ignoreN.c
         assessment2/udp2tcp/udp2tcp.c
         assessment2/mq_carousel/mq_carousel.c
         assessment2/dogbdy/dogbday.c
-        assessment2/sum/sum.c)
+        assessment2/sum/sum.c
+        assessment2/sd/sd.c)
