eat done updated README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ add_executable(new_target ignoreN/ignoreN.c
         assessment2/mq_carousel/mq_carousel.c
         assessment2/dogbdy/dogbday.c
         assessment2/sum/sum.c
-        assessment2/sd/sd.c)
+        assessment2/sd/sd.c
+        assessment2/eat/eat.c)
